Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104987

REG: flicking TableView is broken

XMLWordPrintable

    • All
    • 1bac9de11 (dev), 9418f2d1e (6.5), ad02401b6 (tqtc/lts-6.2), afcdf6cfa (6.4)

      While trying to verify if QTBUG-104947 is fixed in 6.4 (it is), I found yet another one:
      this time it only seems to affect TableView and ListView works correctly.
       
      Let's say you have a flick active and you want to give it another nudge to speed it up a bit more: with the current 6.4 the flick stops dead if you release the finger/mouse outside of the TableView. My test case (see attachment) is a TableView with a Text on top (in a normal mobile/embedded app, this would be some sort of toolbar)
      The first flick (starting from not moving at all), you can release the mouse anywhere: on the TableView, the Text ... heck even outside the X11 window: the list starts scrolling
       
      But if you want to add a second flick to speed up or change direction, you are not allowed to release the mouse/finger anywhere outside the TableView (Text, outside the X11 window): if you do that the flick stops immediately
       
      See the attached example, showing that ListView works, while TableView is broken: click the red area to toggle between list and table.
      Flick a few times, ending the flick motion (a) on the view, (b) the red area and (c) outside the toplevel window
       
      Tested on Linux/X11 with qtdeclarative at aaaba63028

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            rgriebl Robert Griebl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes